--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                                             <span class="icon-dustbin"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h3><a href="services-single-1.html">Industry's no.1 choice</a></h3>
-                                            <p>Our experience in waste management makes us among the leaders of the industry. </p>
+                                            <h3><a href="services-single-1.html">Industry’s No 1 Choice</a></h3>
+                                            <p>Our years of experience in waste management makes us among the leaders of the industry. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -442,8 +442,8 @@
                                             <span class="icon-garbage-can"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h3><a href="services-single-2.html">20 Years of expertise</a></h3>
-                                            <p>We have more than 20 years of expertise in providing waste management solutions to the industries.  </p>
+                                            <h3><a href="services-single-2.html">Modern Facility</a></h3>
+                                            <p>We have modern and state of the art waste treatment facility to handle all kinds of waste.  </p>
                                         </div>
                                     </div>
                                 </li>
@@ -454,8 +454,8 @@
                                             <span class="icon-calendar"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h3><a href="services-single-3.html">Scheduled pickups</a></h3>
-                                            <p>UWM has the license from the KMC to transport and handover the waste to a government designated landfill site.</p>
+                                            <h3><a href="services-single-3.html">100% compliance</a></h3>
+                                            <p>Authorized from SEPA and SSWMB to transport, handle, treat and store all types of waste.</p>
                                         </div>
                                     </div>
                                 </li>
@@ -508,7 +508,7 @@
                             </div>
                             <div class="inner-content">
                                 <div class="text">
-                                    <p>United Waste management is one of the leading waste management companies in Sindh. We provide End-to-end waste solutions for your company.</p>
+                                    <p>United waste management is the member of Global group of companies. We are providing services in Sindh and Balochistan since 1998.</p>
                                 </div>
 
                                 <div class="progress-levels">
