--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 
-<!-- Mirrored from mehedi.asiandevelopers.com/westo-demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Mar 2024 09:37:03 GMT -->
+<!-- Mirrored from mehedi.asiandevelopers.com/Global-demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Mar 2024 09:37:03 GMT -->
 <head>
     <meta charset="UTF-8">
     <title>UWM Website</title>
@@ -477,7 +477,7 @@
                         <div class="about-style1__image clearfix">
                             <div class="text-outer" data-aos="fade-left" data-aos-easing="linear"
                                 data-aos-duration="1500">
-                                westo
+                                GLOBAL
                             </div>
                             <div class="border-top"></div>
                             <div class="border-left"></div>
