--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                                             <span class="icon-pin"></span>
                                         </div>
                                         <div class="text">
-                                            <p>88 broklyn golden street. New York</p>
+                                            <p>Korangi industrial area, karachi</p>
                                         </div>
                                     </li>
                                     <li>
