--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                                             <span class="icon-email"></span>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:yourmail@email.com">needhelp@company.com</a></p>
+                                            <p><a href="mailto:yourmail@email.com">info@uwm.com.pk</a></p>
                                         </div>
                                     </li>
                                     <li>
