--- a/contact.html
+++ b/contact.html
@@ -222,7 +222,7 @@
                                 <nav class="main-menu style1 navbar-expand-md navbar-light">
                                     <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                         <ul class="navigation clearfix">
-                                            <li class="dropdown"><a href="#"><span>Home</span></a>
+                                            <li class="dropdown"><a href="/"><span>Home</span></a>
                                                 <ul>
                                                     <li><a href="index.html">Home Page 01</a></li>
                                                     <li><a href="index-2.html">Home Page 02</a></li>
