--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 <nav class="main-menu style1 navbar-expand-md navbar-light">
                                     <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                         <ul class="navigation clearfix">
-                                            <li class="dropdown current"><a href="#"><span>Home</span></a>
+                                            <li class="dropdown current"><a href="/"><span>Home</span></a>
                                             </li>
                                             <li class="dropdown"><a href="#"><span>Services</span></a>
                                                 <ul>
