--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from mehedi.asiandevelopers.com/westo-demo/contact-element-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Mar 2024 09:37:09 GMT -->
 <head>
     <meta charset="UTF-8">
-    <title>Westo - Responsive HTML 5 Template</title>
+    <title>Inaam - Responsive HTML 5 Template</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
