--- a/index.html
+++ b/index.html
@@ -73,54 +73,7 @@
 
     <div class="boxed_wrapper ltr">
 
-        <!-- Preloader -->
-        <!-- <div class="loader-wrap">
-            <div class="preloader">
-                <div class="preloader-close">Preloader Close</div>
-            </div>
-            <div class="layer layer-one"><span class="overlay"></span></div>
-            <div class="layer layer-two"><span class="overlay"></span></div>
-            <div class="layer layer-three"><span class="overlay"></span></div>
-        </div> -->
-
-        <!-- page-direction -->
-        <!-- <div class="page_direction">
-            <div class="demo-rtl direction_switch"><button class="rtl">RTL</button></div>
-            <div class="demo-ltr direction_switch"><button class="ltr">LTR</button></div>
-        </div> -->
-        <!-- page-direction end -->
-
-        <!-- switcher menu -->
-        <!-- <div class="switcher">
-            <div class="switch_btn">
-                <button><img src="assets/images/icon/color-palette.png" alt="Color Palette"> </button>
-            </div>
-            <div class="switch_menu">
-                <div class="switcher_container">
-                    <ul id="styleOptions" title="switch styling">
-                        <li>
-                            <a href="javascript: void(0)" data-theme="blue" class="blue-color"></a>
-                        </li>
-                        <li>
-                            <a href="javascript: void(0)" data-theme="pink" class="pink-color"></a>
-                        </li>
-                        <li>
-                            <a href="javascript: void(0)" data-theme="violet" class="violet-color"></a>
-                        </li>
-                        <li>
-                            <a href="javascript: void(0)" data-theme="crimson" class="crimson-color"></a>
-                        </li>
-                        <li>
-                            <a href="javascript: void(0)" data-theme="orange" class="orange-color"></a>
-                        </li>
-                        <li>
-                            <a href="javascript: void(0)" data-theme="green" class="green-color"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div> -->
-
+    
 
         <header class="main-header header-style-one">
 
@@ -226,10 +179,15 @@
                                             <li class="dropdown"><a href="#"><span>Services</span></a>
                                                 <ul>
                                                     <li><a href="services.html">View All Services</a></li>
-                                                    <li><a href="services-single-1.html">Garbage Pickup</a></li>
-                                                    <li><a href="services-single-2.html">Dumpster Rental</a></li>
-                                                    <li><a href="services-single-3.html">Portable Toilets</a></li>
-                                                    <li><a href="services-single-4.html">Residential Recycling</a></li>
+                                                    <li><a href="#">Waste Collections
+                                                        & Transport</a></li>
+                                                    <li><a href="#">Incineration of
+                                                        Waste</a></li>
+                                                    <li><a href="#">
+                                                        Waste Recycling
+                                                        & Trades</a></li>
+                                                    <li><a href="#">Waste
+                                                        Consultancy</a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown"><a href="#"><span>Pages</span></a>
