--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                         <ul class="navigation clearfix">
                                             <li class="dropdown current"><a href="/"><span>Home</span></a>
                                             </li>
-                                            <li class="dropdown"><a href="#"><span>Services</span></a>
+                                            <li class="dropdown"><a href="/services.html"><span>Services</span></a>
                                                 <ul>
                                                     <li><a href="services.html">View All Services</a></li>
                                                     <li><a href="#">Waste Collections
@@ -190,15 +190,15 @@
                                                         Consultancy</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="dropdown"><a href="#"><span>Pages</span></a>
+                                            <li class="dropdown"><a href="#"><span>About us</span></a>
                                                 <ul>
-                                                    <li><a href="about.html">About Our Company</a></li>
-                                                    <li><a href="industries.html">Our Industries</a></li>
-                                                    <li><a href="industries-details.html">Industries Details</a></li>
-                                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                                    <li><a href="team.html">Team</a></li>
-                                                    <li><a href="faq.html">FAQ’s</a></li>
-                                                    <li><a href="error.html">404 Error page</a></li>
+                                                    <li><a href="#">About Our Company</a></li>
+                                                    <li><a href="#">Mission & Aim</a></li>
+                                                    <li><a href="#">Waste Regulations</a></li>
+                                                    <li><a href="#">Gallery</a></li>
+                                                    <li><a href="#">Our Team</a></li>
+                                                    <li><a href="#">FAQ’s</a></li>
+                                                    <li><a href="#">404 Error page</a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown"><a href="#"><span>Blog</span></a>
@@ -285,6 +285,12 @@
             <!-- End Mobile Menu -->
 
         </header>
+
+
+
+
+
+
 
 
         <!-- Start Main Slider -->
