--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                         <ul class="navigation clearfix">
                                             <li class="dropdown current"><a href="/"><span>Home</span></a>
                                             </li>
-                                            <li class="dropdown"><a href="/services.html"><span>Services</span></a>
+                                            <li class="dropdown"><a href="uwmwebsite/services.html"><span>Services</span></a>
                                                 <ul>
                                                     <li><a href="services.html">View All Services</a></li>
                                                     <li><a href="#">Waste Collections
