--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
                                     <ul class="navigation clearfix">
                                         <li class="dropdown current"><a href="/"><span>Home</span></a>
                                         </li>
-                                        <li class="dropdown"><a href="#"><span>Services</span></a>
+                                        <li class="dropdown"><a href="services.html"><span>Services</span></a>
                                             <ul>
                                                 <li><a href="services.html">View All Services</a></li>
                                                 <li><a href="#">Waste Collections
@@ -282,7 +282,6 @@
         <!-- End Mobile Menu -->
 
     </header>
-
         <!--Start breadcrumb area paroller-->
         <section class="breadcrumb-area">
             <div class="breadcrumb-area-bg" style="background-image: url(assets/images/breadcrumb/breadcrumb-1.jpg);">
