--- a/services.html
+++ b/services.html
@@ -72,7 +72,6 @@
 
     <div class="boxed_wrapper ltr">
 
-    
         <header class="main-header header-style-one">
 
             <!--Start Header Top-->
@@ -174,7 +173,7 @@
                                         <ul class="navigation clearfix">
                                             <li class="dropdown current"><a href="/"><span>Home</span></a>
                                             </li>
-                                            <li class="dropdown"><a href="/services.html"><span>Services</span></a>
+                                            <li class="dropdown"><a href="services.html"><span>Services</span></a>
                                                 <ul>
                                                     <li><a href="services.html">View All Services</a></li>
                                                     <li><a href="#">Waste Collections
@@ -283,7 +282,6 @@
             <!-- End Mobile Menu -->
 
         </header>
-        
 
 
         <!--Start breadcrumb area paroller-->
