--- a/services.html
+++ b/services.html
@@ -643,7 +643,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <p>
-                                                            <a href="tel:123456789">+1-(246) 333-0089</a>
+                                                            <a href="tel:123456789">+92 316 101 2656</a>
                                                         </p>
                                                     </div>
                                                 </div>
