--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
 
 <body>
-
+    C:\Users\Social Media\Documents\GitHub\Uwmwebsite\assets
 
     
     <header class="main-header header-style-one">
