--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                                         Consultancy</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="dropdown"><a href="#"><span>About us</span></a>
+                                            <li class="dropdown"><a href="/about"><span>About us</span></a>
                                                 <ul>
                                                     <li><a href="#">About Our Company</a></li>
                                                     <li><a href="#">Mission & Aim</a></li>
