--- a/services.html
+++ b/services.html
@@ -359,7 +359,7 @@
 
                                 <div class="bottom-box">
                                     <p>Need help? <br>Talk to an expert</p>
-                                    <h2><a href="tel:+50033333">+ 1- (246) 333-0089</a></h2>
+                                    <h2><a href="tel:+50033333">+ 92 316 101 2656</a></h2>
                                 </div>
                             </div>
 
