--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Mirrored from mehedi.asiandevelopers.com/Global-demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Mar 2024 09:37:03 GMT -->
 <head>
     <meta charset="UTF-8">
-    <title>UWM Website - Global Services</title>
+    <title>UWM Website - Member of Global Services</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
