--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from mehedi.asiandevelopers.com/westo-demo/services-single-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 28 Mar 2024 09:37:10 GMT -->
 <head>
     <meta charset="UTF-8">
-    <title>Westo - Responsive HTML 5 Template</title>
+    <title>Services - United Waste Management Services</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
