--- a/index.html
+++ b/index.html
@@ -190,18 +190,15 @@
                                                         Consultancy</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="dropdown"><a href="/about"><span>About us</span></a>
+                                            <li class="dropdown"><a href="about"><span>About us</span></a>
                                                 <ul>
-                                                    <li><a href="#">About Our Company</a></li>
-                                                    <li><a href="#">Mission & Aim</a></li>
                                                     <li><a href="#">Waste Regulations</a></li>
                                                     <li><a href="#">Gallery</a></li>
-                                                    <li><a href="#">Our Team</a></li>
-                                                    <li><a href="#">FAQ’s</a></li>
-                                                    <li><a href="#">404 Error page</a></li>
+                                                    <li><a href="#">FAQs</a></li>
+                                                  
                                                 </ul>
                                             </li>
-                                            <li class="dropdown"><a href="#"><span>Blog</span></a>
+                                            <li class="dropdown"><a href="#"><span>Gallery</span></a>
                                             </li>
                                             <li><a href="contact.html"><span>Contact</span></a></li>
                                         </ul>
