--- a/contact.html
+++ b/contact.html
@@ -294,12 +294,12 @@
                                 data-aos-duration="1500">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="active">Contact Block</li>
+                                    <li class="active">Contact</li>
                                 </ul>
                             </div>
 
                             <div class="title" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1500">
-                                <h2>Elements</h2>
+                                <h2>Contact us</h2>
                             </div>
 
                         </div>
