--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
                             <nav class="main-menu style1 navbar-expand-md navbar-light">
                                 <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
-                                        <li class="dropdown current"><a href="/"><span>Home</span></a>
+                                        <li class="dropdown current"><a href="index.html"><span>Home</span></a>
                                         </li>
                                         <li class="dropdown"><a href="services.html"><span>Services</span></a>
                                             <ul>
@@ -187,18 +187,15 @@
                                                     Consultancy</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="#"><span>About us</span></a>
+                                        <li class="dropdown"><a href="about"><span>About us</span></a>
                                             <ul>
-                                                <li><a href="#">About Our Company</a></li>
-                                                <li><a href="#">Mission & Aim</a></li>
                                                 <li><a href="#">Waste Regulations</a></li>
                                                 <li><a href="#">Gallery</a></li>
-                                                <li><a href="#">Our Team</a></li>
-                                                <li><a href="#">FAQ’s</a></li>
-                                                <li><a href="#">404 Error page</a></li>
+                                                <li><a href="#">FAQs</a></li>
+                                              
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="#"><span>Blog</span></a>
+                                        <li class="dropdown"><a href="#"><span>Gallery</span></a>
                                         </li>
                                         <li><a href="contact.html"><span>Contact</span></a></li>
                                     </ul>
