--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
                                                     Consultancy</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="about"><span>About us</span></a>
+                                        <li class="dropdown"><a href="about.html"><span>About us</span></a>
                                             <ul>
                                                 <li><a href="#">Waste Regulations</a></li>
                                                 <li><a href="#">Gallery</a></li>
@@ -279,6 +279,7 @@
         <!-- End Mobile Menu -->
 
     </header>
+
         <!--Start breadcrumb area paroller-->
         <section class="breadcrumb-area">
             <div class="breadcrumb-area-bg" style="background-image: url(assets/images/breadcrumb/breadcrumb-1.jpg);">
