--- a/services.html
+++ b/services.html
@@ -320,27 +320,27 @@
                             <div class="view-all-service">
                                 <ul class="service-pages">
                                     <li class="active">
-                                        <a href="services-single-1.html">
+                                        <a href="#services1">
                                             Waste Collection & Transport <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#services1">
                                             Incineration of Waste<span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#services1">
                                             Waste Recycling and Trades <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#services1">
                                             Waste recycling <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="#services1">
                                             Waste Consultancy <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
@@ -374,41 +374,52 @@
                             </div>
 
                             <div class="text-box1">
-                                <h2>Waste Collection & Transport</h2>
-                                <p>Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui
-                                    dolorem ipsum quia quaed inventore veritatis et quasi architecto beatae vitae dicta
-                                    sunt explicabo. Aelltes port lacus quis enim var sed efficitur turpis gilla sed sit
-                                    amet finibus eros. Lorem Ipsum is simply dummy text of the printing and typesetting
-                                    industry. Lorem Ipsum has been the ndustry standard dummy text ever since the 1500s.
+                                <h2>UWM Brief</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
                                 </p>
                             </div>
+                            <div class="text-box1"><h2 id="services1">Services</h2></div>
 
                             <div class="text-box2">
                                 <div class="row">
                                     <div class="col-xl-6">
                                         <div class="text-box2-single">
                                             <h4>
-                                                <span class="icon-check-mark-button"></span> Integer et massa gilla var
-                                                sit
+                                                <span class="icon-check-mark-button"></span> Waste Collection & Transport
                                             </h4>
                                         </div>
                                     </div>
 
                                     <div class="col-xl-6">
                                         <div class="text-box2-single">
-                                            <h4><span class="icon-check-mark-button"></span> Integer et massa gilla var
-                                                sit
+                                            <h4><span class="icon-check-mark-button"></span>Waste Incineration
                                             </h4>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="text-box2">
+                                <div class="row">
+                                    <div class="col-xl-6">
+                                        <div class="text-box2-single">
+                                            <h4>
+                                                <span class="icon-check-mark-button"></span> Waste Recycling
+                                            </h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-xl-6">
+                                        <div class="text-box2-single">
+                                            <h4><span class="icon-check-mark-button"></span>Waste Consultancy
+                                            </h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-box1"><h2>Related Services</h2></div>
 
                             <div class="text-box3">
-                                <p>It has survived not only five centuries. Lorem Ipsum is simply dummy text of the new
-                                    design printng and type setting Ipsum take a look at our round. When an unknown
-                                    printer took a galley of type and scrambled it to make a type specimen book. It has
-                                    survived not only five centuries, but also the leap into electronic typesetting.</p>
+                                <p>UWM is a member of Global group of companies together which provides all services related to environmental aspects. We have our own ISO 17025 Certified Environmental lab for testing environmental samples such as drinking water, waste water, etc.  </p>
                             </div>
 
                             <div class="text-box4">
@@ -421,35 +432,32 @@
 
                                     <div class="col-xl-6">
                                         <div class="content-box">
-                                            <h2>Service Benefits</h2>
-                                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+                                            <h2>Why UWM?</h2>
+                                            <p>Some of our USPs are
                                             </p>
 
                                             <ul>
                                                 <li>
-                                                    <h4><span class="icon-arrow-right"></span> Refresing to get such a
-                                                        personal touch.</h4>
+                                                    <h4><span class="icon-arrow-right"></span> One-Window solution</h4>
                                                 </li>
 
                                                 <li>
-                                                    <h4><span class="icon-arrow-right"></span> Duis aute irure dolor in
-                                                        in voluptate..</h4>
+                                                    <h4><span class="icon-arrow-right"></span> ISO 17025 Certified Lab (GEL)</h4>
                                                 </li>
 
                                                 <li>
-                                                    <h4><span class="icon-arrow-right"></span> Velit esse cillum eu
-                                                        fugiat pariatur.</h4>
+                                                    <h4><span class="icon-arrow-right"></span>More than 2 decades of Experience</h4>
                                                 </li>
 
                                                 <li>
-                                                    <h4><span class="icon-arrow-right"></span> Duis aute irure dolor in
-                                                        in voluptate.</h4>
+                                                    <h4><span class="icon-arrow-right"></span>Trained staff</h4>
                                                 </li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="text-box1"><h2>FAQs</h2></div>
 
                             <div class="faq-style1__content">
                                 <ul class="accordion-box">
@@ -458,11 +466,10 @@
                                             <div class="icon-outer">
                                                 <i class="icon-arrow-down"></i>
                                             </div>
-                                            <h3>Interdum et malesuada fames ac ante ipsum</h3>
+                                            <h3>What is the hazardous waste?</h3>
                                         </div>
                                         <div class="acc-content current">
-                                            <p>Suspendisse finibus urna mauris, vitae consequat quam vel. Vestibulum leo
-                                                ligula, vit commodo nisl Sed luctus venenatis pellentesque.</p>
+                                            <p>Any waste that have a potential to damage the environment or it can be potentially harmful to humans or animals. For example, Electric Generator oil, Ewaste, Broken Glass, Harmful chemicals, Hospital waste, etc. </p>
                                         </div>
                                     </li>
                                     <li class="accordion block">
@@ -470,11 +477,10 @@
                                             <div class="icon-outer">
                                                 <i class="icon-arrow-down"></i>
                                             </div>
-                                            <h3>Maecenas condimentum sollicitudin ligula.</h3>
+                                            <h3>What can be called as non-Hazardous waste?</h3>
                                         </div>
                                         <div class="acc-content">
-                                            <p>Suspendisse finibus urna mauris, vitae consequat quam vel. Vestibulum leo
-                                                ligula, vit commodo nisl Sed luctus venenatis pellentesque.</p>
+                                            <p>As the name implies, it is a type of waste that is not harmful to the environment or to any life. It includes, kitchen waste, packaging materials, etc</p>
                                         </div>
                                     </li>
                                     <li class="accordion block">
@@ -482,11 +488,10 @@
                                             <div class="icon-outer">
                                                 <i class="icon-arrow-down"></i>
                                             </div>
-                                            <h3>Duis rhoncus orci ut metus rhoncus.</h3>
+                                            <h3>Do you have a valid license for waste handling?<h3>
                                         </div>
                                         <div class="acc-content">
-                                            <p>Suspendisse finibus urna mauris, vitae consequat quam vel. Vestibulum leo
-                                                ligula, vit commodo nisl Sed luctus venenatis pellentesque.</p>
+                                            <p>Handling of waste not only requires license from the authorities but it also requires proper handling expertise. UWM is proud to announce that we have valid NOC from Sindh Environmental Protection Agency (SEPA) and Sindh Solid Waste Management Board (SSWMB). We hold decades of experience in this field.</p>
                                         </div>
                                     </li>
                                 </ul>
