--- a/index.html
+++ b/index.html
@@ -472,10 +472,10 @@
                                     <div class="progress-box wow">
                                         <div class="inner count-box">
                                             <div class="top">
-                                                <div class="text">Recycling</div>
+                                                <div class="text">Recycled</div>
                                                 <div class="skill-percent">
-                                                    <span class="count-text" data-speed="3000" data-stop="77">0</span>
-                                                    <span class="percent">%</span>
+                                                    <span class="count-text" data-speed="2000" data-stop="77">0</span>
+                                                    <span class="percent">Mega Tonns</span>
                                                 </div>
                                             </div>
                                             <div class="bar">
@@ -490,10 +490,10 @@
                                     <div class="progress-box wow">
                                         <div class="inner count-box">
                                             <div class="top">
-                                                <div class="text">Waste Services</div>
+                                                <div class="text">Waste handled</div>
                                                 <div class="skill-percent">
-                                                    <span class="count-text" data-speed="3000" data-stop="90">0</span>
-                                                    <span class="percent">%</span>
+                                                    <span class="count-text" data-speed="2000" data-stop="60">0</span>
+                                                    <span class="percent">Mega Tonns</span>
                                                 </div>
                                             </div>
                                             <div class="bar">
@@ -512,9 +512,9 @@
                                         <div class="col-xl-6 col-lg-6 col-md-6">
                                             <div class="text-box">
                                                 <ul>
-                                                    <li>Expert Staff</li>
-                                                    <li>Free Pickup Service</li>
-                                                    <li>Waste Transportation to landfill sites</li>
+                                                    <li>Experienced and Professional Staff</li>
+                                                    <li>State-of-the-art Facility</li>
+                                                    <li>Ensure Best Practices in waste handling</li>
                                                 </ul>
                                             </div>
                                         </div>
