--- a/index.html
+++ b/index.html
@@ -1465,7 +1465,7 @@
                                     </div>
                                     <div class="our-company-info">
                                         <div class="text-box">
-                                            <p>United Waste Management is a company that provides waste management solutions in Sindh and Balochistan. </p>
+                                            <p>United Waste Management is a member of Global Group of Companies which provide Environmental solutions to the industries in Sindh and Balochistan.  </p>
                                         </div>
                                         <div class="footer-social-link">
                                             <ul class="clearfix">
