--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@
             <div class="auto-container">
                 <div class="home1-page-map-outer">
                     <!--Map Canvas-->
-                    <div class="mapouter"><div class="gmap_canvas"><iframe width="1500" height="560" id="gmap_canvas" src="https://maps.google.com/maps?q=karachi&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://timenowin.net/">online clock</a><br><a href="https://www.analarmclock.com/"></a><br><style>.mapouter{position: relative;text-align: right;height: 560px;width: 1500px;}</style><a href="https://www.embedmaps.co">map box</a><style>.gmap_canvas{overflow: hidden;background: none !important;height: 560px;width: 1500px;}</style></div></div>
+                    <div class="mapouter"><div class="gmap_canvas"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6561.623755648251!2d66.94963450398822!3d24.993745663405765!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33beda301aa49%3A0x6868464212da1ed6!2sUnited%20Waste%20Management%20(Pvt)%20Limited%20UWM!5e0!3m2!1sen!2s!4v1712442469042!5m2!1sen!2s" width="1500" height="560" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><a href="https://timenowin.net/">online clock</a><br><a href="https://www.analarmclock.com/"></a><br><style>.mapouter{position: relative;text-align: right;height: 560px;width: 1500px;}</style><a href="https://www.embedmaps.co">map box</a><style>.gmap_canvas{overflow: hidden;background: none !important;height: 560px;width: 1500px;}</style></div></div>
                 </div>
             </div>
         </section>
@@ -1583,7 +1583,7 @@
                     <div class="container">
                         <div class="bottom-inner">
                             <div class="copyright">
-                                <p>Copyright &copy; 2024 <a href="index.html">BizzDS</a> All Rights Reserved.</p>
+                                <p>Copyright &copy; 2024 | <a href="https://bizzds.com/">BizzDS</a> | All Rights Reserved.</p>
                                
                                 
                             </div>
