--- a/about.html
+++ b/about.html
@@ -335,7 +335,7 @@
                                 <div class="sub-title">
                                     <h3>Founder's Perspective</h3>
                                 </div>
-                                <h2>About United <br> Waste Mangement<br> Services</h2>
+                                <h2>About United <br> Waste Management<br> Services</h2>
                             </div>
                             <div class="text">
                                 <p>Our company provides Green solutions to the industries who are concerned about their environmental footprint. With our expertise and dedication to the cause, we are on our way to protect and advocate for the local as well as national environmental issues in Pakistan. </p>
