--- a/services.html
+++ b/services.html
@@ -320,27 +320,27 @@
                             <div class="view-all-service">
                                 <ul class="service-pages">
                                     <li class="active">
-                                        <a href="#services1">
+                                        <a href="#s" onclick="showSection('section1')">
                                             Waste Collection & Transport <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#services1">
+                                        <a href="#s" onclick="showSection('section2')">
                                             Incineration of Waste<span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#services1">
+                                        <a href="#s" onclick="showSection('section3')">
                                             Waste Recycling and Trades <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#services1">
+                                        <a href="#s" onclick="showSection('section4')">
                                             Waste recycling <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#services1">
+                                        <a href="#s" onclick="showSection('section5')">
                                             Waste Consultancy <span class="icon-right-arrow"></span>
                                         </a>
                                     </li>
@@ -373,11 +373,36 @@
                                 <img src="assets/images/services/service-details-1-img1.jpg" alt="" />
                             </div>
 
-                            <div class="text-box1">
-                                <h2>UWM Brief</h2>
+                            <div class="text-box1 section" id="section1" style="display: block;">
+                                <h2>UWM Brief Section 1</h2>
                                 <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
                                 </p>
                             </div>
+
+                            <div class="text-box1 section" id="section2" style="display: none;">
+                                <h2>UWM Brief Section 2</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
+                                </p>
+                            </div>
+
+                            <div class="text-box1 section" id="section3" style="display: none;">
+                                <h2>UWM Brief Section 3</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
+                                </p>
+                            </div>
+
+                            <div class="text-box1 section" id="section4" style="display: none;">
+                                <h2>UWM Brief Section 4</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
+                                </p>
+                            </div>
+
+                            <div class="text-box1 section" id="section5" style="display: none;">
+                                <h2>UWM Brief Section 5</h2>
+                                <p>Whether you need a policy for waste management in your industry or any service related to waste management, UWM provides a one-stop solution for all your problems. UWM is among the oldest waste management companies in Pakistan. Our clientele expands from almost all industrial sectors, be it pharmaceuticals, manufacturing, engineering, etc. 
+                                </p>
+                            </div>
+
                             <div class="text-box1"><h2 id="services1">Services</h2></div>
 
                             <div class="text-box2">
