--- a/contact.html
+++ b/contact.html
@@ -341,7 +341,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col text-center mt-5">
+                    <div class="slogan-text-box">
+                        <p>korangi industrial area karachi 1</p>
+                    </div>
+                    <div class="slogan-text-box mt-3">
+                        <p>korangi industrial area karachi 2</p>
+                    </div>
+                </div>
             </div>
+            
         </section>
         <!--End slogan area-->
 
