--- a/contact.html
+++ b/contact.html
@@ -319,7 +319,7 @@
                             </div>
                             <div class="phone">
                                 <p>Have any questions?</p>
-                                <a href="tel:123456789">+1-(246) 333-0089</a>
+                                <a href="tel:123456789">+92 316 101 2656</a>
                             </div>
                         </div>
                     </div>
@@ -341,13 +341,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="col text-center mt-5">
-                    <div class="slogan-text-box">
-                        <p>korangi industrial area karachi 1</p>
-                    </div>
-                    <div class="slogan-text-box mt-3">
-                        <p>korangi industrial area karachi 2</p>
-                    </div>
+                <div class="row mt-5 text-center">
+                        <div class=" col slogan-text-box border-right">
+                            <h2 class="text-light">Site office</h2>
+                            <p>korangi industrial area karachi 1</p>
+                            <p>03132888355</p>
+                        </div>
+                        <div class="col slogan-text-box mt-3">
+                            <h2 class="text-light">Corporate office</h2>
+                            <p>korangi industrial area karachi 2</p>
+                            <p>03132888355</p>
+                        </div>
+
                 </div>
             </div>
             
